--- a/frame/actors/Cargo.toml
+++ b/frame/actors/Cargo.toml
@@ -17,18 +17,18 @@ codec = { package = "parity-scale-codec", version = "1.3.0", default-features = 
 pwasm-utils = { version = "0.12.0", default-features = false }
 wasmi-validation = { version = "0.3.0", default-features = false }
 parity-wasm = { version = "0.41.0", default-features = false }
-frame-support = { version = "2.0.0-rc2", default-features = false, path = "../support" }
-frame-system = { version = "2.0.0-rc2", default-features = false, path = "../system" }
-pallet-balances = { version = "2.0.0-rc2", default-features = false, path = "../balances" }
-sp-core = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/core" }
-sp-runtime = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/runtime" }
-sp-io = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/io" }
-sp-std = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/std" }
-sp-sandbox = { version = "0.8.0-rc2", default-features = false, path = "../../primitives/sandbox" }
-sp-arithmetic = { version = "2.0.0-rc2", default-features = false, path = "../../primitives/arithmetic" }
+frame-support = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+frame-system = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+pallet-balances = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-core = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-runtime = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-io = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-std = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-sandbox = { version = "0.8.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-arithmetic = { version = "2.0.0-rc2", default-features = false, git = "https://github.com/paritytech/substrate" }
 
 [dev-dependencies]
-sp-core = { version = "2.0.0-rc2", path = "../../primitives/core", default-features = false }
+sp-core = { version = "2.0.0-rc2", git = "https://github.com/paritytech/substrate", default-features = false }
 
 [features]
 default = ["std"]
